--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <h1>GitHub Pages - Enlace a las Ramas</h1>
         <p>Haz clic en los botones para acceder a los archivos de las ramas:</p>
         <!-- Botones para enlazar las ramas -->
-        <a href="https://github.com/TU_USUARIO/TU_REPOSITORIO/tree/rama-1" class="btn">Enlace a Rama 1</a>
-        <a href="https://github.com/TU_USUARIO/TU_REPOSITORIO/tree/rama-2" class="btn">Enlace a Rama 2</a>
+        <a href="https://github.com/Pancri-esp/repo-animacion/tree/main" class="btn">Enlace a Rama Main</a>
     </div>
 </body>
 </html>
