--- a/index.html
+++ b/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub index - Enlaces a Ramas</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GitHub Page - Enlaces a Rama</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 2rem;
+      background-color: #f4f4f9;
+    }
+    h1 {
+      color: #333;
+    }
+    .buttons {
+      margin-top: 2rem;
+    }
+    a {
+      display: inline-block;
+      margin: 1rem;
+      padding: 1rem 2rem;
+      font-size: 1.2rem;
+      color: white;
+      text-decoration: none;
+      background-color: #0078d7;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+    a:hover {
+      background-color: #005bb5;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>GitHub Pages - Enlace a las Ramas</h1>
-        <p>Haz clic en los botones para acceder a los archivos de las ramas:</p>
-        <!-- Botones para enlazar las ramas -->
-        <a href="https://github.com/Pancri-esp/repo-animacion/tree/main" class="btn">Enlace a Rama Main</a>
-    </div>
+  <h1>Archivos en las Ramas</h1>
+  <p>Haz clic en los botones para descargar los archivos de las diferentes ramas.</p>
+  <div class="buttons">
+    <a href="https://github.com/Pancri-esp/repo-animacion/tree/main" download>Rama Main)</a>
+  </div>
 </body>
 </html>
+
