--- a/Index.html
+++ b/Index.html
@@ -34,10 +34,10 @@
   </style>
 </head>
 <body>
-  <h1>Archivos en las Ramas</h1>
-  <p>Haz clic en los botones para descargar los archivos de las diferentes ramas.</p>
+  <h1>Archivos en las Rama</h1>
+  <p>Haz clic en el botón para acceder al repositorio principal.</p>
   <div class="buttons">
-    <a href="https://github.com/Pancri-esp/repo-animacion/tree/main" download>Rama Main)</a>
+    <a href="https://github.com/Pancri-esp/repo-animacion/tree/main" download>Repositorio Principal</a>
   </div>
 </body>
 </html>
